--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   </body>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jetbrains+Mono&display=swap');
 </style>
 
-<a href="https://discord.gg/mBGB4pdXqk ">
+<a href="https://discord.gg/SGXTG8QCAN">
     <h3>Discord</h3>
 </a>
 <h1>Quantum Continued</h1>
-<h2>block game modifications for anarchy servers.</h2>
+<h2>only mc client with penis esp.</h2>
 <title>
-    Quantum Continued's Website
+    Quantum Continued
 </title>
