--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <style>
