--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </a>
 <h1>Quantum Continued</h1> 
 </br>
-<h2>only mc client with penis esp.</h2>
+<h2>only mc client with good penis esp.</h2>
 <title>
     Quantum Continued
 </title>
